# serde-yaml

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_from_slice.rs
src/: de.rs  error.rs  lib.rs  mapping.rs  number.rs  ser.rs  with.rs
src/value/: from.rs  index.rs  mod.rs  partial_eq.rs  ser.rs  tagged.rs
tests/: test_de.rs  test_error.rs  test_ser.rs  test_serde.rs  test_value.rs
